Added initial card structure and media query

--- a/card.html
+++ b/card.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="card.css">
 </head>
 <body>
-
+    <section class="card-list">
     <div class="card">
         <img src="imagesTom/Sean-Edwards.png" alt="Turtle swimming" />
         <a href="/whatson-category/art-in-the-city/" class="posted">Art in the City</a>
@@ -21,6 +21,6 @@
           </div>
     
     </div>
-    
+   </section> 
 </body>
 </html>
