--- a/footer.html
+++ b/footer.html
@@ -8,4 +8,30 @@
 </head>
 <body>
 
-    
+    <div class='container'>
+        <footer class='content-info'>
+            <div class='row'>
+                <div class='col-sm-12 cold-lg-4'>
+                    <p>
+                        <strong>Arnolfini</strong>
+                        <br>
+                        16 Narrow Quay
+                        <br>
+                        Bristol BS1 4QA
+                        <br>
+                        0117 917 2300
+                        <br>
+                        Arnolfini is a registered charity (number 311504)
+                        <br>
+                        Company number 00877987
+                    </p>
+                </div>
+            <div class='col-xs-6 col-sm-4 col-lg-2'>
+                <p class='menu-title'>
+                    <strong>Visit</strong>
+                </p>
+                
+            </div>
+            </div>
+        </footer>
+    </div>
