updated scale of burger svg

--- a/pattern-jc.html
+++ b/pattern-jc.html
@@ -11,16 +11,16 @@
     <link rel="apple-touch-icon" href="icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/styles.min.css">
 </head>
 
 <body>
-    <header>
-        <h1>Arnolfini</h1>
-        <nav>
+    <header class="main-header">
+        <h1 class="main-header__logo">Arnolfini</h1>
+        <nav class="main-header__nav">
             <button>
-                <span>Menu</span>
-                <img src="assets/svg/burger.svg" alt="burger icon to extend menu">
+                <span class="main-header__nav__Menu" >Menu</span>
+                <img class="main-header__nav__burger" src="assets/svg/burger.svg" alt="burger icon to extend menu">
             </button>
         </nav>
 
