Added visit column links

--- a/footer.html
+++ b/footer.html
@@ -30,7 +30,29 @@
                 <p class='menu-title'>
                     <strong>Visit</strong>
                 </p>
-                
+                <ul id='menu-visit' class='menu'>
+                    <li class='menu-item menu-opening-times'>
+                        <a href='#'>Opening Times</a>
+                    </li>
+                    <li class='menu-item menu-covid-guidance'>
+                        <a href='#'>Covid Guidance</a>
+                    </li>
+                    <li class='menu-item menu-getting-here'>
+                        <a href='#'>Getting Here</a>
+                    </li>
+                    <li class='menu-item menu-accessibility'>
+                        <a href='#'>Accessibility</a>
+                    </li>
+                    <li class='menu-item menu-bookshop'>
+                        <a target='_blank' href='#'>Bookshop</a>
+                    </li>
+                    <li class='menu-item menu-cafe'>
+                        <a href='#'>Café</a>
+                    </li>
+                    <li class='menu-item menu-most-frequently-asked-questions'>
+                        <a href='#'>Frequently Asked Questions</a>
+                    </li>
+                </ul>
             </div>
             </div>
         </footer>
