added second column links to footer

--- a/footer.html
+++ b/footer.html
@@ -54,6 +54,38 @@
                     </li>
                 </ul>
             </div>
+            <div class='col-xs-6 col-sm-4 col-lg-2'>
+                <p class='menu-title'>
+                    <strong>Connect</strong>
+                </p>
+                <ul id='menu-connect' class='menu'>
+                    <li class='menu-item menu-contact'>
+                        <a href='#'>Contact</a>
+                    </li>
+                    <li class='menu-item menu-facebook'>
+                        <a target='_blank' href='#'>Facebook</a>
+                    </li>
+                    <li class='menu-item menu-twitter'>
+                        <a target='_blank' href='#'>Twitter</a>
+                    </li>
+                    <li class='menu-item menu-instagram'>
+                        <a target='_blank' href='#'>Intagram</a>
+                    </li>
+                    <li class='menu-item menu-trip-advisor'>
+                        <a target='_blank' href='#'>TripAdvisor</a>
+                    </li>
+                    <li class='menu-item menu-sound-cloud'>
+                        <a target='_blank' href='#'>Soundcloud</a>
+                    </li>
+                    <li class='menu-item menu-vimeo'>
+                        <a href='#'>Vimeo</a>
+                    </li>
+                    <li class='menu-item menu-youtube'>
+                        <a href='#'>YouTube</a>
+                    </li>
+                </ul>
+
+            </div>
             </div>
         </footer>
     </div>
