updated header layout with flex

--- a/pattern-jc.html
+++ b/pattern-jc.html
@@ -19,14 +19,11 @@
         <h1 class="main-header__logo">Arnolfini</h1>
         <nav class="main-header__nav">
             <button>
-                <span class="main-header__nav__Menu" >Menu</span>
+                <span class="main-header__nav__menu" >Menu</span>
                 <img class="main-header__nav__burger" src="assets/svg/burger.svg" alt="burger icon to extend menu">
             </button>
         </nav>
-
     </header>
-
-
 </body>
 
 </html>
