added third column list to footer

--- a/footer.html
+++ b/footer.html
@@ -84,7 +84,28 @@
                         <a href='#'>YouTube</a>
                     </li>
                 </ul>
-
+            </div>
+            <div class='col-xs-6 col-sm-4 col-lg-2'>
+                <p class='menu-title'>
+                    <strong>About</strong>
+                </p>
+                <ul id='menu-about' class='menu'>
+                    <li class='menu-item menu-history-and-archive'>
+                        <a href='#'>History and Archive</a>
+                    </li>
+                    <li class='menu-item menu-support'>
+                        <a href='#'>Support</a>
+                    </li>
+                    <li class='menu-item menu-arnolfini-board-of-trustees'>
+                        <a href='#'>Arnolfini Board of Trustees</a>
+                    </li>
+                    <li class='menu-item menu-jobs'>
+                        <a href='#'>Jobs</a>
+                    </li>
+                    <li class='menu-item menu-privacy-and-cookies'>
+                        <a target='_blank' href='#'>Privacy and Cookies</a>
+                    </li>
+                </ul>
             </div>
             </div>
         </footer>
