added final column list to footer

--- a/footer.html
+++ b/footer.html
@@ -103,7 +103,29 @@
                         <a href='#'>Jobs</a>
                     </li>
                     <li class='menu-item menu-privacy-and-cookies'>
-                        <a target='_blank' href='#'>Privacy and Cookies</a>
+                        <a href='#'>Privacy and Cookies</a>
+                    </li>
+                </ul>
+            </div>
+            <div class='col-xs-6 col-sm-4 col-lg-2'>
+                <p class='menu-title'>
+                    <strong>News</strong>
+                </p>
+                <ul id='menu-news' class='menu'>
+                    <li class='menu-item menu-newsletter-sign-up'>
+                        <a href='#'>Newsletter Sign-Up</a>
+                    </li>
+                    <li class='menu-item menu-latest-newsletter'>
+                        <a target='_blank' href='#'>Latest Newsletter</a>
+                    </li>
+                    <li class='menu-item menu-news'>
+                        <a href='#'>News</a>
+                    </li>
+                    <li class='menu-item menu-press-releases'>
+                        <a href='#'>Press Releases</a>
+                    </li>
+                    <li class='menu-item menu-press-and-marketing-contact'>
+                        <a href='#'>Press and Marketing Contact</a>
                     </li>
                 </ul>
             </div>
