added images to footer

--- a/footer.html
+++ b/footer.html
@@ -130,6 +130,29 @@
                     </li>
                 </ul>
             </div>
+            <div class='col-lg-12'>
+                <a class='footer-logo' href='#' title='uwe'>
+                    <img class='lazy-loaded' src='/imagesTom/uwe.png' alt='UWE Bristol'>
+                </a>
+                <a class='footer-logo' href='#' title='ace'>
+                    <img class='lazy-loaded' src='/imagesTom/arts-council.png' alt='Arts council england'>
+                </a>
+                <a class='footer-logo' href='#' title='acbmt'>
+                    <img class='lazy-loaded' src='/imagesTom/ashley-clinton-trust.png' alt='Ashley Clinton Baker Mills Trust'>
+                </a>
+                <a class='footer-logo' href='#' title='headfirst'>
+                    <img class='lazy-loaded' src='/imagesTom/Headfirst-Logo-Wide-THIS.png' alt='Arnolfini Ticketing Partner Headfirst Bristol'>
+                </a>
+                <a class='footer-logo' href='#' title='visit-bristol'>
+                    <img class='lazy-loaded' src='/imagesTom/.png' alt='UWE Bristol'>
+                </a>
+                <a class='footer-logo' href='#' title='bcc'>
+                    <img class='lazy-loaded' src='/imagesTom/bristol-council.png' alt='Bristol City Council'>
+                </a>
+                <a class='footer-logo' href='#' title='wgtgve'>
+                    <img class='lazy-loaded' src='/imagesTom/England-Green-1.jpg' alt='We are good to go, vist england'>
+                </a>
+            </div>
             </div>
         </footer>
     </div>
