--- a/card.html
+++ b/card.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
+    <header class="main-header">
+        <h1 class="main-header__logo">Arnolfini</h1>
+        <nav class="main-header__nav">
+            <button>
+                <span class="main-header__nav__menu" >Menu</span>
+                <img class="main-header__nav__burger" src="assets/svg/burger.svg" alt="burger icon to extend menu">
+            </button>
+        </nav>
+    </header>
+
     <section class="card-list">
     <div class="card">
         <img src="images/Sean-Edwards.png" alt="Sean-Edwards" />
