upaded image paths on html

--- a/footer.html
+++ b/footer.html
@@ -132,25 +132,25 @@
             </div>
             <div class='col-lg-12'>
                 <a class='footer-logo' href='#' title='uwe'>
-                    <img class='lazy-loaded' src='/imagesTom/uwe.png' alt='UWE Bristol'>
+                    <img class='lazy-loaded' src='images/uwe.png' alt='UWE Bristol'>
                 </a>
                 <a class='footer-logo' href='#' title='ace'>
-                    <img class='lazy-loaded' src='/images/arts-council.png' alt='Arts council england'>
+                    <img class='lazy-loaded' src='images/arts-council.png' alt='Arts council england'>
                 </a>
                 <a class='footer-logo' href='#' title='acbmt'>
-                    <img class='lazy-loaded' src='/images/ashley-clinton-trust.png' alt='Ashley Clinton Baker Mills Trust'>
+                    <img class='lazy-loaded' src='images/ashley-clinton-trust.png' alt='Ashley Clinton Baker Mills Trust'>
                 </a>
                 <a class='footer-logo' href='#' title='headfirst'>
-                    <img class='lazy-loaded' src='/images/Headfirst-Logo-Wide-THIS.png' alt='Arnolfini Ticketing Partner Headfirst Bristol'>
+                    <img class='lazy-loaded' src='images/Headfirst-Logo-Wide-THIS.png' alt='Arnolfini Ticketing Partner Headfirst Bristol'>
                 </a>
                 <a class='footer-logo' href='#' title='visit-bristol'>
-                    <img class='lazy-loaded' src='/images/.png' alt='UWE Bristol'>
+                    <img class='lazy-loaded' src='images/visit-bristol.png' alt='UWE Bristol'>
                 </a>
                 <a class='footer-logo' href='#' title='bcc'>
-                    <img class='lazy-loaded' src='/images/bristol-council.png' alt='Bristol City Council'>
+                    <img class='lazy-loaded' src='images/bristol-council.png' alt='Bristol City Council'>
                 </a>
                 <a class='footer-logo' href='#' title='wgtgve'>
-                    <img class='lazy-loaded' src='/images/England-Green-1.jpg' alt='We are good to go, visit england'>
+                    <img class='lazy-loaded' src='images/England-Green-1.png' alt='We are good to go, visit england'>
                 </a>
             </div>
             </div>
