--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="styles.main.scss">
 </head>
 <body>
 
