--- a/card.html
+++ b/card.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
+    <header class="main-header">
+        <h1 class="main-header__logo">Arnolfini</h1>
+        <nav class="main-header__nav">
+            <button>
+                <span class="main-header__nav__menu" >Menu</span>
+                <img class="main-header__nav__burger" src="assets/svg/burger.svg" alt="burger icon to extend menu">
+            </button>
+        </nav>
+    </header>
     <section class="card-list">
     <div class="card">
         <img src="images/Sean-Edwards.png" alt="Sean-Edwards" />
@@ -80,17 +89,14 @@
     <a href="https://bookshop.arnolfini.org.uk">BOOKSHOP</a>
     <p>Arnolfini is home to one of the best specialist art bookshops in the country.</p>
     
-    <h2>Recent Comments</h2>
-    <a href="">Donec sagittis massa sit amet consectetur</a>
-    <a href="">Vivamus rutrum mauris</a>
-    <a href="">Donec sagittis massa consectetur</a>
-    <a href="">Quisque urna lacus</a>
-    <h2>Recent Comments</h2>
-    <a href="">Donec sagittis massa sit amet consectetur</a>
-    <a href="">Vivamus rutrum mauris</a>
-    <a href="">Donec sagittis massa consectetur</a>
-    <a href="">Quisque urna lacus</a>
+    <img src="images/ArnolfiniCafeBar.png" alt="cafe bar" />
+    <a href="https://bookshop.arnolfini.org.uk">ARNOLFINI CAFE BAR</a>
+    <p>Arnolfini is delighted to be working in partnership with Bristol Beer Factory.</p>
+    <p>Overlooking Bristol's historic harbour, Arnolfini Café Bar is a picturesque, central location ideal for meeting up with friends, family and colleagues.</p>
 
+    <img src="images/GraysonPerryPreview.png" alt="hire our spaces" />
+    <a href="https://bookshop.arnolfini.org.uk">HIRING OUR SPACES</a>
+    <p>Arnolfini’s spaces are available for private hire and we also regularly work with artistic partners on events.</p>
 </div>
 </body>
 </html>
