--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             </button>
         </nav>
     </header>
+
+    <div class="cardAndAsideWrapper">
     <section class="card-list">
+
     <div class="card">
         <img src="images/Sean-Edwards.png" alt="Sean-Edwards" />
         <a href="/whatson-category/art-in-the-city/" class="posted">Art in the City</a>
@@ -83,7 +86,7 @@
     </div>
 
    </section> 
-
+    
    <div class="aside-list">
     <img src="images/bookshop.png" alt="bookshop" />
     <a href="https://bookshop.arnolfini.org.uk">BOOKSHOP</a>
@@ -98,9 +101,9 @@
     <a href="https://bookshop.arnolfini.org.uk">HIRING OUR SPACES</a>
     <p>Arnolfini’s spaces are available for private hire and we also regularly work with artistic partners on events.</p>
 </div>
-
+</div>
 <!--footer-->
-<div class='container'>
+<div class='container footerWrapper'>
     <footer class='content-info'>
         <div class='row'>
             <div class='col-sm-12 cold-lg-4'>
