added mobile overlay to index.html and created js file

--- a/index.html
+++ b/index.html
@@ -10,12 +10,32 @@
     <header class="main-header">
         <h1 class="main-header__logo">Arnolfini</h1>
         <nav class="main-header__nav">
-            <button>
+            <button id="burger-button">
                 <span class="main-header__nav__menu" >Menu</span>
                 <img class="main-header__nav__burger" src="assets/svg/burger.svg" alt="burger icon to extend menu">
             </button>
         </nav>
     </header>
+
+    <div id="burger-overlay" class="overlay">
+        <h1 class="overlay__logo">arnolfini</h1>
+        <button id="overlay-close" class="overlay__button">
+            <span class="overlay__button__text" >close</span>
+            <img class="overlay__button_svg" src="assets/svg/burger.svg" alt="cross shaped close button">
+        </button>
+        <ul>
+            <li>
+                <a href="#">What's On</a>
+                <a href="#">Visit</a>
+                <a href="#">Support</a>
+                <a href="#">News</a>
+                <a href="#">About</a>
+                <a href="#">Hire</a>
+                <a href="#">Bookshop</a>
+                <a href="#">Cafe</a>
+            </li>
+        </ul>
+    </div>
 
     <div class="cardAndAsideWrapper">
     <section class="card-list">
