--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img src="images/SophiaHarari.png" alt="Sophia Harari" />
         <a href="/whatson/art-in-the-city-sean-edwards/"class="posted">Sophia Harari | Two Worlds Collide</a>
         <p> Thursday, 1st October 2020 to Saturday, 31st October 2020, 12:00 to 17:00 </p>
-        <h4>Sophia Harari is a writer, poet and musician creating content surrounding identity and self-expression. Two Worlds Collide is an exploration of her identity, considering the intersects of her Moroccan-ness and Blackness and questioned how they inform one another.</h4>
+        <h4>this is a test Sophia Harari is a writer, poet and musician creating content surrounding identity and self-expression. Two Worlds Collide is an exploration of her identity, considering the intersects of her Moroccan-ness and Blackness and questioned how they inform one another.</h4>
      
         <div class="item-links">
             <a href="/whatson/art-in-the-city-sean-edwards/" class="button">Find out more</a>
