added overlay close js

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="burger-overlay" class="mobile-overlay">
         <h1 class="overlay__logo">arnolfini</h1>
-        <button id="burger-button" class="mobile-overlay__button">
+        <button id="close-button" class="mobile-overlay__button">
             <span class="mobile-overlay__button__text" >close</span>
             <img class="mobile-overlay__button_svg" src="assets/svg/burger.svg" alt="cross shaped close button">
         </button>
