--- a/indexDev.html
+++ b/indexDev.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.min.css">
-    <script defer src="js/burger-dev.js"></script>
+    <script defer src="js/app.min.js"></script>
 </head>
 <body>
     <header class="main-header">
